# event_display

./: Cargo.toml
migrations/00000000000000_diesel_initial_setup/: .up.sql.swp  down.sql  up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
src/app/auth/: mod.rs
src/app/errors/: mod.rs
src/app/groups/: mod.rs
src/app/websockets/: mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/database/events/: handlers.rs  messages.rs  methods.rs  mod.rs  models.rs  responses.rs
src/database/groups/: handlers.rs  messages.rs  methods.rs  models.rs  responses.rs
src/database/methods/: auth.rs  events.rs  groups.rs  mod.rs  shortevents.rs  users.rs
src/database/shortevents/: handlers.rs  messages.rs  methods.rs  models.rs  responses.rs
src/database/tokens/: messages.rs  methods.rs  mod.rs  models.rs  responses.rs
src/database/users/: handlers.rs  messages.rs  methods.rs  mod.rs  models.rs  responses.rs
src/middlewares/: auth.rs  authstorage.rs  mod.rs  permissions.rs  role.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs
src/routes/events/: mod.rs
src/routes/groups/: mod.rs
src/routes/shortevents/: mod.rs
src/routes/users/: mod.rs
src/utils/tokens/: mod.rs
src/web/auth/: mod.rs
src/websockets/: mod.rs
