[package]
name = "event_display"
version = "0.1.0"
authors = ["abashurov"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres", "chrono", "r2d2"] }
serde_json = "1.0.38"
chrono = { version = "0.4.4", features = ["serde"] }
flexi_logger = "^0.10.7"
log = "0.4"
serde = "1.0.88"
serde_derive = "1.0.88"
actix-web = "0.7"
dotenv = "0.9.0"
futures = "0.1.25"
actix = "0.7.9"
bytes = "0.4.12"
jsonwebtoken = "5"
bcrypt = "0.4"