[package]
name = "event_display"
version = "0.1.0"
authors = ["abashurov"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres", "chrono", "r2d2"] }
serde_json = "1.0"
chrono = { version = "0.4.4", features = ["serde"] }
flexi_logger = "0.11"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
# Update to 1.0 when it's RC/stable
actix-web = "0.7"
dotenv = "0.14"
futures = "0.1.25"
actix = "0.7"
bytes = "0.4.12"
# Update to 6 as soon as actix-web 1.0 goes RC/stable
jsonwebtoken = "5"
bcrypt = "0.4"
num_cpus = "1.10.0"